# popper-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/basic/: Cargo.toml  index.html
examples/basic/src/: main.rs
examples/yew/: Cargo.toml  index.html
examples/yew/src/: app.rs  main.rs
examples/yew/src/example/: basic.rs  component.rs  mod.rs  ondemand.rs  portal.rs
examples/yew/styles/: main.css
popper-rs-sys/: Cargo.toml
popper-rs-sys/js/debug/: popperjs.js
popper-rs-sys/js/hell/popperjs/: package-lock.json  package.json  rollup.config.js
popper-rs-sys/js/release/: popperjs.js
popper-rs-sys/src/: lib.rs  types.rs
src/: console.rs  lib.rs  options.rs  state.rs
src/modifier/: mod.rs  offset.rs  prevent_overflow.rs  same_width.rs
src/state/: mod.rs  yew.rs
src/yew/: component.rs  mod.rs
src/yew/component/: inline.rs  inner.rs  mod.rs  portal.rs  portal_to.rs
