[package]
name = "popper-rs"
version = "0.1.0"
edition = "2021"

license = "Apache-2.0"
readme = "README.md"
description = "A crate for using Popper in Rust"
repository = "https://github.com/ctron/popper-rs"

categories = ["wasm", "web-programming", "gui"]
keywords = ["yew", "popper", "web", "html"]

[dependencies]
gloo-utils = "0.1"
js-sys = "0.3.64"
serde = { version = "1", features = ["derive" ] }
serde_json = "1"
wasm-bindgen = "0.2.87"

popper-rs-sys = { version = "0.1.0-alpha.4", path = "popper-rs-sys" }

yew = { version = "0.20", optional = true }

[dependencies.web-sys]
version = "0.3"

[features]
debug = ["web-sys/console"]

[package.metadata.docs.rs]
all-features = true
