[package]
name = "popper-rs-sys"
version = "0.1.0"
edition = "2021"

license = "Apache-2.0"
description = "WebAssembly bindings for popperjs"
repository = "https://github.com/ctron/popper-rs"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "Node"
]
