[package]
name = "basic"
version = "0.1.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
description = "Example of the popper-rs crate"
repository = "https://github.com/ctron/popper-rs"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-events = "0.2"
gloo-utils = "0.2"

popper-rs = { path = "../.." }

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlElement",
    "console"
]
